Changes to support moving from Java 8 to Java 11. Also, some code cleanup to remove unused variables and to improve space and time performance Java 9+ where Double object constructors were used when simple conversions would work better.